--- a/ms-productos/src/main/resources/application.properties
+++ b/ms-productos/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 
 spring.application.name=servicio-productos
-server.port=8001
+# Dejar puerto en 0, para que tome valor aleatorio disponible, así desacoplamos el puerto (config instancia Eureka, si queremos levantar N instancias del servicio) 
+#server.port=8001
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+# Indicar ruta del server Eureka (cada deploy del cliente envia un latido de corazon a Eureka)
+# Cada 30 seg los clientes envian latido para indicar que estan vivos y que pueden contar con ellos
+# Si en 90 seg el cliente no manda latidos, el proyecto se elimina del registro de Eureka, cuando se reinicia, nuavamente se agrega a Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
