Sesión 30: Zuul Api Gateway completo
Sesión 30: Zuul Api Gateway completo

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ ms-eureka-server/\.mvn/*
 ms-eureka-server/mvnw
 
 ms-eureka-server/mvnw\.cmd
+
+
+
+ms-zuul-server/\.mvn/*
+
+ms-zuul-server/mvnw
+
+ms-zuul-server/mvnw\.cmd
+
